# jerryscript-optimizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gen_snapshot
cmake/: jerry.diff  jerryscript.cmake
main/: CMakeLists.txt  main.cpp
scripts/: patch.sh
src/: CMakeLists.txt  basic-block.cpp  basic-block.h  bytecode.cpp  bytecode.h  cfg-analysis.cpp  cfg-analysis.h  common.h  control-flow-analysis.cpp  control-flow-analysis.h  dominator-analysis.cpp  dominator-analysis.h  dominator.cpp  dominator.h  inst.cpp  inst.h  ir-builder.cpp  ir-builder.h  liveness-analysis.cpp  liveness-analysis.h  liveness-analyzer.cpp  liveness-analyzer.h  optimizer.cpp  optimizer.h  pass.cpp  pass.h  passes.h  regalloc-linear-scan.cpp  regalloc-linear-scan.h  register-compresser.cpp  register-compresser.h  snapshot-reader.cpp  snapshot-readwriter.cpp  snapshot-readwriter.h  stack.cpp  stack.h  value.cpp  value.h
src/include/: basic-block.h  bytecode.h  common.h  inst.h  optimizer.h  snapshot-reader.h  snapshot-readwriter.h  stack.h  value.h
